--- a/pkg/web/templates/index.html
+++ b/pkg/web/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="default-namespace" content="{{ .DefaultNamespace }}">
     <title>Pod Visualizer - Kubernetes Dashboard</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
